--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,15 @@
   margin: 0;
   padding: 0;
   
+  
+}
+.list-link, .navbar{
+  text-decoration: none;
+  color :white;
+}
+.list-link:hover{
+  color:Orange;
+  font-size: 2rem;
 }
 .background-img{
   background-position: center; 
@@ -20,7 +29,5 @@
 }
 .navbar{
   position:relative;
-  text-align: right;
-  text-decoration: none;
-  
+  text-align: right;  
 }
